resilient/tests/snapshots/diagnostics_snapshots__typecheck_binop_array_plus_int@typecheck_binop_array_plus_int.snap
---
source: resilient/tests/diagnostics_snapshots.rs
assertion_line: 159
description: "fn main(int _d) {\n    let xs = [1, 2, 3];\n    return xs + 1;\n}\nmain(0);\n"
expression: output
---
Running type checker...
Type error: <tmp>.rs:3:17: Cannot apply '+' to array and int
<tmp>.rs:3:17: Cannot apply '+' to array and int
Type error: Cannot apply '+' to array and int
       return xs + 1;
                   ^
Error: Type check failed: <tmp>.rs:3:17: Cannot apply '+' to array and int
